# s3vm_pines

./: PKG-INFO  README.md  linearSVM_pines.qmd  pyproject.toml  setup.py
exp/: Moh_experiment00.html  Moh_experiment00.ipynb  Moh_experiment01.ipynb  Moh_experiment02.ipynb  Moh_experiment03.ipynb
mybook/: chap1.ipynb  chap2_1.ipynb  chap2_2.ipynb  chap3_1.ipynb  chap3_2.ipynb
mybook/_book/: chap1.html  chap2_.html  chap2_1.html  index.html
s3vm_pines/: __init__.py  module.py
src/s3vm_pines/: __init__.py  module.py
