[tool.poetry]
name = "s3vm-pines"
version = "0.1.15"
description = "A study on Multiclass S3VM for IndianPines"
authors = ["Kotaro SONODA <kotaro1976@gmail.com>"]
maintainers = ["Kotaro SONODA <kotaro1976@gmail.com>"]
repository = 'https://github.com/helmenov/s3vm_pines'
keywords = ['S3VM', 'IndianPines']
license = "MIT"
readme = "README.md"
packages = [{include = "s3vm_pines"}]
#include = ["mybook/_book", "mybook/*.ipynb"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
SciencePlots = "^1.0.9"
pandas = "^1.5.2"
matplotlib = "^3.6.2"
numpy = "^1.23.5"
#indianpines = {git = "https://github.com/helmenov/indianpines.git"}
qns3vm = {git = "https://github.com/helmenov/qns3vm.git"}
indianpines = {git = "https://github.com/helmenov/indianpines.git"}

[tool.poetry.group.dev.dependencies]
scipy = "^1.9.0"
jupyter = "^1.0.0"
notebook = "^6.4.12"
jupyter-cache = "^0.5.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
