[project]
name = "s3vm-pines"
version = "0.1.24"
description = "A study on Multiclass S3VM for IndianPines"
authors = [
    { name = "Kotaro SONODA", email = "kotaro1976@gmail.com" }
]
repository = 'https://github.com/helmenov/s3vm_pines'
keywords = ['S3VM', 'IndianPines']
dependencies = [
    "numpy>=2.1.3",
    "pandas>=2.2.3",
    "matplotlib>=3.9.2",
    "indianpines @ git+https://github.com/helmenov/indianpines.git",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "scipy>=1.14.1",
    "jupyter>=1.1.1",
    "notebook>=7.2.2",
    "jupyter-cache>=1.0.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/s3vm_pines"]
